# oap

./: .env.example  AGENTS.md  Cargo.toml  README.md  docker-compose.yml
apps/: README.md
crates/oap-api/: Cargo.toml
crates/oap-api/src/: config.rs  errors.rs  extractors.rs  main.rs  router.rs  state.rs
crates/oap-api/src/handlers/: activities.rs  actors.rs  bookings.rs  exports.rs  health.rs  mod.rs  participant_profiles.rs  provider_profiles.rs  sessions.rs  webhook_endpoints.rs
crates/oap-db/: Cargo.toml
crates/oap-db/migrations/: 001_initial_schema.sql
crates/oap-db/src/: lib.rs  repo.rs
crates/oap-domain/: Cargo.toml
crates/oap-domain/src/: booking.rs  capacity.rs  errors.rs  lib.rs  transitions.rs
crates/oap-events/: Cargo.toml
crates/oap-events/src/: delivery.rs  lib.rs  signing.rs
crates/oap-types/: Cargo.toml
crates/oap-types/src/: activity.rs  actor.rs  attendance.rs  booking.rs  common.rs  ids.rs  lib.rs  location.rs  participant.rs  policy.rs  provider.rs  session.rs  webhook.rs
docs/: protocol-overview.md
sdk/: README.md
