[workspace]
resolver = "2"
members = [
    "crates/oap-types",
    "crates/oap-domain",
    "crates/oap-db",
    "crates/oap-events",
    "crates/oap-api",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/1ops-eu/oap"
rust-version = "1.85"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "request-id", "util"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "json", "migrate"] }

# IDs
uuid = { version = "1", features = ["v7", "serde"] }

# Time
time = { version = "0.3", features = ["serde", "serde-human-readable", "formatting", "parsing", "macros"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Crypto (for webhook signing)
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Configuration
dotenvy = "0.15"

# Validation
validator = { version = "0.19", features = ["derive"] }

# OpenAPI
utoipa = { version = "5", features = ["axum_extras", "uuid", "time"] }

# HTTP client (for webhook delivery)
reqwest = { version = "0.12", features = ["json"] }

# Workspace crates
oap-types = { path = "crates/oap-types" }
oap-domain = { path = "crates/oap-domain" }
oap-db = { path = "crates/oap-db" }
oap-events = { path = "crates/oap-events" }
