[package]
name = "oap-api"
description = "Axum HTTP API server — the OAP reference runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "oap-server"
path = "src/main.rs"

[dependencies]
oap-types = { workspace = true }
oap-domain = { workspace = true }
oap-db = { workspace = true }
oap-events = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
utoipa = { workspace = true }
