[package]
name = "oap-db"
description = "Database layer with SQLx migrations and repository traits for the Open Activity Protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
oap-types = { workspace = true }
oap-domain = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
