[package]
name = "oap-domain"
description = "Domain logic, state transitions, and validation for the Open Activity Protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
oap-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
