[package]
name = "oap-types"
description = "Core domain types, enums, and state machines for the Open Activity Protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
thiserror = { workspace = true }
validator = { workspace = true }
utoipa = { workspace = true }
